------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.6 branch)

------------------------------------------------------------------------------

See UPGRADE document for a list of incompatible changes.


Interchange 5.7.0 under development.

Core
----

* refined error message for missing actions.

* Vend::Interpolate::interpolate_html returns undef on undefined input text.
  This allows to determine whether $Tag->include fails or just produces an
  empty string.

Search
------

* mv_force_coordinate (fc) added to force coordinated search.  Normally, when
the number of search field does not match the number of search strings (specs),
coordinated mode is automatically turned off. With 'fc', number of search specs
is adjusted to match the number of search fields, either by filling the array
with last-set mv_searchspec, or by trimming excess values. Useful when you want
to search for one string in multiple fields in coordinated mode.

* remove trailing whitespace from text file headers 

* Under rare circumstances the missing search can fall through in a block
  below, which caused an internal server error in the following code line:

	$obj->{matches} = scalar @{$obj->{mv_results}};

  This is now mitigated by an empty mv_results array and results in a search
  error as one would expect.

UserTag
-------

* srcliteral attribute added to [button] tag. Setting srcliteral avoids the image existence check for the src attribute. 

* [run-profile] removes automatically generated profiles only.

* scratch attribute added to [capture-page] to store the resulting page in a
  scratch variable, supplied by Phil Smith.

OrderCheck
----------

* added ISBN-13 support to isbn order check and relocated it to code/OrderCheck.

UI
--

* prevent whitespace leaking into CREDIT_CARDS_ACCEPTED variable (#209)

(end)