@@ -49,6 +49,9 @@ UserTag
 * scratch attribute added to [capture-page] to store the resulting page in a
   scratch variable, supplied by Phil Smith.
 
+* lines attribute added to [nitems] to show the number of lines in the shopping
+  cart instead of the sum of the items (#225).
+
 OrderCheck
 ----------
 
